[package]
name = "serir"
version = "0.1.0"
edition = "2021"
authors = ["Paweł Kobojek <pawelkobojek@narf.ai>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.5.1"
respirator = "0.1.0"
structopt = "0.3.25"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "io-util", "net", "macros", "signal", "sync"]}
